# Pcopy

./: .gitignore  .pcopyignore.sample  BUILD_SUMMARY.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  PROMPT.txt  PYPI_PUBLISHING.md  QUICKSTART.md  README.md  RELEASE.md  Specs.txt  add_to_path.ps1  build_standalone.ps1  pcopy.bat  pcopy.py  pyproject.toml  requirements.txt  setup.py  test.ps1
